# Patient_Triage

./: .gitignore  app.py  pyproject.toml
patient_triage/: Dockerfile  README.md  changes.txt  guide.txt  inference.py  openenv.yaml  requirements.txt
patient_triage/tasks/: critical.py  easy.py  hard.py  medium.py
patient_triage/tests/: test_triage_env.py
