[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patient-triage-env"
version = "1.0.0"
description = "OpenEnv-compliant hospital patient triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "openai>=1.40.0",
    "openenv>=0.1.0",
    "python-dotenv>=1.0.1",
    "flask>=3.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "inference"]
